@@ -1,3 +1,9 @@
+2009-04-09  Steve Ellcey  <sje@cup.hp.com>
+
+	* Makefil.def (languages): New entries.
+	* Makefile.tpl (check-gcc-*): New generic target.
+	* Makefile.in: Regenerate.
+
 2009-03-27  Eli Zaretskii  <eliz@gnu.org>
 
 	* djunpack.bat: Use ".." quoting in Sed command, for the sake of
